--- a/app/src/main/res/layout/activity_sheet2.xml
+++ b/app/src/main/res/layout/activity_sheet2.xml
@@ -165,7 +165,7 @@
                 android:id="@+id/textH"
                 style="@style/ComienzaTexto"
                 android:layout_below="@+id/textG"
-                android:text="H. Voltaje Baterías > 12 ó 24" />
+                android:text="H. Voltaje Baterías > 12 ó 24 Vdc" />
 
             <EditText
                 android:id="@+id/EditVoltajeBateria"
@@ -176,7 +176,9 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
+                android:digits="123456789"
                 android:gravity="center"
+                android:inputType="number"
                 android:textSize="8sp" />
 
             <Spinner
@@ -343,8 +345,8 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
-                android:textSize="8sp"
-                android:hint="Galones"/>
+                android:hint="Galones"
+                android:textSize="8sp" />
 
             <TextView
                 android:id="@+id/textQ"
@@ -368,8 +370,8 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/style_etbg"
                 android:gravity="center"
-                android:textSize="8sp"
-                android:hint="Galones"/>
+                android:hint="Galones"
+                android:textSize="8sp" />
 
             <TextView
                 android:id="@+id/textR"
@@ -713,7 +715,7 @@
                 android:text="Camara" />
 
             <ImageButton
-                android:id="@+id/ButtonCamera2Upload"
+                android:id="@+id/ButtonCameraSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/EditTrabajoRealizado"
@@ -722,7 +724,20 @@
                 android:layout_marginBottom="20dp"
                 android:layout_toEndOf="@+id/ButtonCamera2"
                 android:shadowColor="@color/black"
-                android:src="@drawable/ic_baseline_camera"
+                android:src="@drawable/ic_baseline_image_search"
+                android:text="Camara" />
+
+            <ImageButton
+                android:id="@+id/ButtonCamera2Upload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/EditTrabajoRealizado"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="20dp"
+                android:layout_toEndOf="@+id/ButtonCameraSearch"
+                android:shadowColor="@color/black"
+                android:src="@drawable/ic_baseline_cloud_upload"
                 android:text="Camara" />
 
             <Button
